I am startin to work in the compiler.

--- a/scripting/CMakeLists.txt
+++ b/scripting/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 set(Lodtalk_SRC
      AST.cpp
      Collections.cpp
+     Compiler.cpp
      InputOutput.cpp
      Method.cpp
      Object.cpp
