I am starting to work in the compiled method assembler.

--- a/scripting/CMakeLists.txt
+++ b/scripting/CMakeLists.txt
@@ -10,6 +10,7 @@ set(Lodtalk_SRC
      Compiler.cpp
      InputOutput.cpp
      Method.cpp
+     MethodBuilder.cpp
      Object.cpp
      ObjectModel.cpp
      ParserScannerInterface.cpp
