I am starting to encode the compiled method.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,7 +103,7 @@ include_directories(
 add_subdirectory(scripting)
 
 # Build the core library
-add_subdirectory(core)
+#add_subdirectory(core)
 
 # Build the samples
-add_subdirectory(samples)
+#add_subdirectory(samples)
