I am starting to work in the basic interpreter.

--- a/scripting/CMakeLists.txt
+++ b/scripting/CMakeLists.txt
@@ -14,6 +14,7 @@ set(Lodtalk_SRC
      Object.cpp
      ObjectModel.cpp
      ParserScannerInterface.cpp
+     StackInterpreter.cpp
      ${BISON_LodtalkParser_OUTPUTS}
      ${FLEX_LodtalkScanner_OUTPUTS}
 )
