Now I am loading a script with the source code of the smalltalk kernel. Now I have support for loading scripts from multiples files.

--- a/scripting/CMakeLists.txt
+++ b/scripting/CMakeLists.txt
@@ -8,6 +8,8 @@ set(Lodtalk_SRC
      AST.cpp
      Collections.cpp
      Compiler.cpp
+     Exception.cpp
+     FileSystem.cpp
      InputOutput.cpp
      Method.cpp
      MethodBuilder.cpp
