I added support for dumping the bytecode content of a method.

--- a/scripting/CMakeLists.txt
+++ b/scripting/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
 
 set(Lodtalk_SRC
      AST.cpp
+     BytecodeSets.cpp
      Collections.cpp
      Compiler.cpp
      Exception.cpp
