I am fixing some bugs for windows.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,3 +1,8 @@
+FILE(GLOB Common_HEADERS
+	"${PROJECT_SOURCE_DIR}/include/Loden/*.hpp"
+	"${PROJECT_SOURCE_DIR}/include/Loden/GUI/*.hpp"
+)
+
 set(LodenCoreGUI_SRCS
 	GUI/AgpuCanvas.cpp
 	GUI/Button.cpp
@@ -7,7 +12,7 @@ set(LodenCoreGUI_SRCS
 	GUI/Widget.cpp
 	GUI/Window.cpp
 )
-	
+
 set(LodenCore_SRCS
 	Application.cpp
 	Printing.cpp
@@ -16,5 +21,5 @@ set(LodenCore_SRCS
 )
 
 add_definitions(-DBUILDING_LODEN_CORE)
-add_library(LodenCore SHARED ${LodenCore_SRCS} ${LodenCoreGUI_SRCS})
+add_library(LodenCore SHARED ${LodenCore_SRCS} ${LodenCoreGUI_SRCS} ${Common_HEADERS})
 target_link_libraries(LodenCore ${Loden_DEP_LIBS})
