--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable(Sample1 Sample1.cpp)
-target_link_libraries(Sample1 LodenCore)
+add_executable(Sample1 WIN32 Sample1.cpp)
+target_link_libraries(Sample1 LodenCore ${LodenProgram_DEP_LIBS})
 
-add_executable(Sample2 Sample2.cpp)
-target_link_libraries(Sample2 LodenCore)
+add_executable(Sample2 WIN32 Sample2.cpp)
+target_link_libraries(Sample2 LodenCore ${LodenProgram_DEP_LIBS})
