I did a proper pipeline state manager that loads the pipeline states from files.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,5 +1,8 @@
-FILE(GLOB Common_HEADERS
+FILE(GLOB LodenCore_HEADERS
 	"${PROJECT_SOURCE_DIR}/include/Loden/*.hpp"
+)
+
+FILE(GLOB LodenCoreGUI_HEADERS
 	"${PROJECT_SOURCE_DIR}/include/Loden/GUI/*.hpp"
 )
 
@@ -15,11 +18,15 @@ set(LodenCoreGUI_SRCS
 
 set(LodenCore_SRCS
 	Application.cpp
+	FileSystem.cpp
+	JSON.cpp
 	Printing.cpp
-	PipelineBuilder.cpp
 	PipelineStateManager.cpp
 )
 
+source_group("Public Headers" FILES ${LodenCore_HEADERS})
+source_group("Public Headers\\GUI" FILES ${LodenCoreGUI_HEADERS})
+
 add_definitions(-DBUILDING_LODEN_CORE)
-add_library(LodenCore SHARED ${LodenCore_SRCS} ${LodenCoreGUI_SRCS} ${Common_HEADERS})
+add_library(LodenCore SHARED ${LodenCore_SRCS} ${LodenCoreGUI_SRCS} ${LodenCore_HEADERS} ${LodenCoreGUI_HEADERS})
 target_link_libraries(LodenCore ${Loden_DEP_LIBS})
