I did a small refactoring.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -22,6 +22,7 @@ set(LodenCore_SRCS
 	FileSystem.cpp
 	JSON.cpp
 	Matrices.cpp
+	Object.cpp
 	Printing.cpp
 	PipelineStateManager.cpp
 	Structure.cpp
