I am starting to make a font converter from to use signed distance fields for antialiased fonts.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,9 @@ include_directories(
 # Build third party libraries
 add_subdirectory(thirdparty)
 
+# Build the tools
+add_subdirectory(tools)
+
 # Build the core library
 add_subdirectory(core)
 
